<resources>
    <string name="app_name">Pop Movies</string>
    <string name="detail_activity_title">Movie Detail</string>
    <string name="action_sorting_order">Sorting Order</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="action_highest_rated">Highest rated</string>
    <string name="action_favorite">Favorite</string>
    <string name="trailer_title">Trailers: </string>
    <string name="review_title">Reviews: </string>
    <string name="button_favorite">MARK AS\n FAVORITE"</string>
    <string name="button_unfavorite">UN-\nFAVORITE</string>
    <string name="empty_content_indicator">Please Select a movie from left pane \nand the details will show here.</string>
</resources>
