<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/detailBackground">

    <TextView
        android:id="@+id/empty_content_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:text="@string/empty_content_indicator"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/black" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/titleBackground"
                android:fontFamily="casual"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                tools:text="example" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/image_height"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"

                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/des_text_size"
                        tools:text="example release date" />

                    <TextView
                        android:id="@+id/movie_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/des_text_size"
                        tools:text="example vote average" />

                    <TextView
                        android:id="@+id/button_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:background="@color/favoriteBlockBackground"
                        android:gravity="center"
                        android:padding="@dimen/favorite_button_padding"
                        android:text="@string/button_favorite" />

                    <TextView
                        android:id="@+id/button_unfavorite"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:background="@color/favoriteBlockBackground"
                        android:gravity="center"
                        android:padding="@dimen/favorite_button_padding"
                        android:text="@string/button_unfavorite" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/des_text_size"
                tools:text="Overview Example" />

            <View
                android:id="@+id/black_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/halving_line_width"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/trailer_title"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/des_text_size"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/trailer_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

            <View
                android:id="@+id/black_line_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/halving_line_width"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/review_title"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/des_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reviews_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/des_text_size"
                tools:text="some Reviews" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
